--- a/login.html
+++ b/login.html
@@ -23,13 +23,13 @@
     <div class="jadwal">
         <h2>LOGIN</h2>
         <div class="date">
-            <p>NAMA ANDA</p>
+            		<p>NAMA</p>
 			<input type="text">
-            <p>EMAIL ANDA </p>
+            		<p>EMAIL</p>
 			<input type="text">
-            <p>ALAMAT ANDA</p>
+           		 <p>ALAMAT</p>
 			<input type="text">
-			<p>WHATSAPP ANDA</p>
+			<p>WHATSAPP </p>
             <input type="text">
             <a href="index.html"><button >LOGIN</button></a>
         </div>
